--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,15 +3,16 @@
 		<title>First Blog</title>
 	</head>
 	<body>
-		<h1><a href="">Swetha's Blog</a></h1>
 		<div>
-			<h2><a href="">First Blog Post</a></h2>
-			<p>Hello!, How are you?</p>
-		</div>
-		<div> 
-			<h2><a href="https://www.wikipedia.org/">Second Blog Post</a></h2>
-			<p>Today is friday the thirteenth</p>
+    		<h1><a href="/">Django Girls Blog</a></h1>
 		</div>
 
+		{% for post in posts %}
+   			 <div>
+        		<p>published: {{ post.published_date }}</p>
+        		<h1><a href="">{{ post.title }}</a></h1>
+        		<p>{{ post.text|linebreaksbr }}</p>
+    		</div>
+		{% endfor %}
 	</body>
 </html>
